traces/bug_605.txt
examples++-hpddm/hpddm.cpp:768: error: DEAD_STORE
  The value written to &zs (type char) is never used.
Showing all 1 steps of the trace


examples++-hpddm/hpddm.cpp:768:5: Write of unused value
766.       const char ds = 'S';
767.   #endif
768.       const char zs = 'G';
           ^
769.       Schwarz::add<HpSchwarz, double, ds>();
770.       zzzfff->Add("dschwarz", atype<HpSchwarz<double, ds>*>());
